// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It sould be invalid if input does not contains string 1`] = `
<div>
  <input />
  <div>
    This does not contain Hi. Please check your value and try again.
  </div>
</div>
`;

exports[`It sould be valid if input contains string 1`] = `
<div>
  <input />
  <div />
</div>
`;

exports[`It sould be valid if input is empty 1`] = `
<div>
  <input />
  <div />
</div>
`;
